# Strategem

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  PRD.md  README.md  master_roadmap.md  master_roadmap_v2.md  master_roadmap_v3.md  pyproject.toml  requirements.txt  session_checkpoint_dummy_test.json  session_checkpoint_my_game_session.json  state_map.json  state_map_Game.json  state_map_python.json
.codex/: config.toml
bridge_maker/: __init__.py  __main__.py
configs/: autopilot.yaml  coq_qa.yaml  npc_behavior.yaml  qa_test.yaml  session.yaml  session_dummy.yaml
development/: 2026-06-02_summary.md  2026-06-03_summary.md  2026-06-14_summary.md  2026-06-16_summary.md
docs/: README.md  architecture.md  getting-started.md  index.html  pitch_uk.md  sdk-reference.md  status.md  styles.css
examples/: __init__.py  annotated_dummy.py  buggy_roguelike.py
grant_materials/: bridge_maker_grant_presentation.pptx  grant_demo_report.html  grant_demo_report.json  noita_ws_readiness.md  presentation_uk.md  proof_of_work.md
src/: agent_generator.py  auto_analyzer.py  bridge_maker.py  codegen_schema.py  config.py  dashboard.py  engine_bridges.py  game_env.py  game_env_generated.py  intrinsic_curiosity.py  live_game_env.py  logger.py  orchestrator.py  orchestrator_v2.py  ray_callbacks.py  reward_generator.py  run_session.py  swarm.py  train.py  train_rllib.py
tests/: test_contract_sdk.py  test_noita_ws_session.py
tools/: _dummy_lib.c  build_dummy_lib.py  build_grant_deck.py  dummy_lib.c  dummy_target.py  mock_coq_server.py  test_discovery_live.py  test_mcp_clients.py
(+87 files in other folders)
