[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-maker"
version = "0.1.0a0"
description = "Contract-first automated game QA SDK for indie developers."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Bridge-Maker" }
]
keywords = ["game-development", "qa", "reinforcement-learning", "gymnasium", "testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "gymnasium>=0.29.0",
  "numpy<2.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
docs = []
training = [
  "stable-baselines3[extra]>=2.1.0",
  "tensorboard>=2.12.0",
  "ray[rllib]>=2.9.0",
]
greybox = [
  "python-dotenv>=1.0.0",
  "langgraph>=0.2.0",
  "groq>=0.9.0",
  "mcp>=1.5.0,<2.0.0",
  "pymem>=1.13.0",
  "pydirectinput>=1.0.4",
  "dxcam>=0.0.5",
  "Pillow>=10.0.0",
  "pywin32>=306; platform_system == 'Windows'",
]
mlops = [
  "wandb>=0.15.0",
  "modal>=0.60.0",
  "azure-storage-blob>=12.0.0",
]
noita = [
  "websockets>=12.0",
]

[project.scripts]
bridge-maker = "src.bridge_maker:main"

[tool.setuptools.packages.find]
include = ["bridge_maker*", "src*", "adapters*", "examples*"]
